[tool.poetry]
name = "BiliListener"
version = "0.2.6"
package-mode = false
description = "BiliBili 异步多直播监听程序"
authors = ["Shadow403 <admin@shadow403.cn>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
httpx = ">=0.27.2"
fastapi = ">=0.115.2"
SQLAlchemy = ">=2.0.36"
uvicorn = ">=0.32.0"
email-validator = ">=2.2.0"
pyinstaller = "^6.11.1"
pyyaml = "^6.0.2"
cryptography = "^44.0.0"
pycryptodome = "^3.21.0"
websockets = "^14.2"
bili-listener = "^1.1.7"
bilibili-api-python = "^17.1.4"
